change home template to show list of articles

--- a/themes/pj/templates/index.html
+++ b/themes/pj/templates/index.html
@@ -1,9 +1,22 @@
-{% extends "shared/common.html" %}
+{% extends 'base.html' %}
 {% block title %}The Physiome Journal{% endblock %}
 {% block body %}
 <p><a href="#">Physiome standards</a></p>
 <p><a href="#">Software tools</a></p>
-<h2>Articles and Models+Data</h2>
-<iframe src="https://widgets.figsh.com/articles/5761031/embed?show_title=1" width="568" height="351" frameborder="0"></iframe>
-<iframe src="https://widgets.figshare.com/articles/4888394/embed?show_title=1" width="568" height="351" frameborder="0"></iframe>
+<div class="callout">
+  <h3>Latest articles</h3>
+  <ul>
+    {% for article in articles_page.object_list %}
+    <li><a href="{{SITEURL}}/{{article.url}}">{{ article.title}}</a> by {% for author in article.pubauthor %}
+      {{author}},
+      {% endfor %}
+      {% for doc in article.documents %}
+      {% if loop.index is odd %}
+      <a href="{{article.documents[loop.index0+1]}}">{{doc}}</a>
+      {% else %}
+      {% endif %}
+      {% endfor %}</li>
+    {% endfor %}
+  </ul>
+</div>
 {% endblock %}
