--- a/themes/pj/templates/page.html
+++ b/themes/pj/templates/page.html
@@ -1,4 +1,4 @@
-{% extends "shared/common.html" %}
+{% extends 'base.html' %}
 {% block title %}{{page.title}}{% endblock %}
 {% block body %}
 {{page.content}}
