add home link to navigation bar

--- a/themes/pj/templates/shared/common.html
+++ b/themes/pj/templates/shared/common.html
@@ -32,6 +32,7 @@
 	  <div class="top-bar">
 	    <div class="top-bar-left">
 	      <ul class="menu">
+		<li><a href="{{SITEURL}}/">Home</a></li>
 		<li><a href="physiome-project.html">The Physiome Project</a></li>
 		<li><a href="about.html">About the Journal</a></li>
 		<li><a href="instructions-to-authors.html">Instructions to Authors</a></li>
