wip add article

--- a/themes/pj/templates/article.html
+++ b/themes/pj/templates/article.html
@@ -1,5 +1,19 @@
 {% extends 'base.html' %}
 {% block title %} {{page.title}} {% endblock %}
 {% block body %}
-  {{article.content}}
+    <h2>{{article.title}}</h2>
+    <p>
+      {% for author in article.pubauthor %}
+	{{author}}
+	{% if not loop.last %},{% endif %}
+      {% endfor %}
+    </p>
+    <p>Available documents:
+      {% for doc in article.documents %}
+	{% if loop.index is odd %}
+	  <span style="margin-right:10px"><i class="fi-page" style="margin-right:5px"></i><a href="{{article.documents[loop.index0+1]}}">{{doc}}</a></span>
+	{% else %}
+	{% endif %}
+      {% endfor %}
+    {{article.content}}
 {% endblock %}
