--- a/themes/pj/templates/base.html
+++ b/themes/pj/templates/base.html
@@ -7,6 +7,7 @@
     <title></title>
     <link rel="stylesheet" href="{{SITEURL}}/theme/css/foundation.min.css">
     <link rel="icon" href="{{SITEURL}}/images/favicon.png">
+    <link rel="stylesheet" href="{{SITEURL}}/theme/css/foundation-icons/foundation-icons.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i" rel="stylesheet">
     <!--<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">-->
     <!--<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">-->
