--- a/themes/pj/templates/index.html
+++ b/themes/pj/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% import 'shared/pub.html' as pub %}
 {% block title %}The Physiome Journal{% endblock %}
 {% block body %}
   <p><a href="#">Physiome standards</a></p>
@@ -6,25 +7,10 @@
 <div class="callout">
   <h3>Latest articles</h3>
   <ul>
-    {% for article in articles_page.object_list %}
-      <li>
-	<p style="margin-bottom:0px"><a href="{{SITEURL}}/{{article.url}}">{{ article.title}}</a></p>
-	<p>
-	  {% for author in article.pubauthor %} 
-	    {{author}}
-	    {% if not loop.last %}
-	      ,
-	    {% endif %}
-	  {% endfor %}
-	  {% for doc in article.documents %}
-	    {% if loop.index is odd %}
-	      <a href="{{article.documents[loop.index0+1]}}">{{doc}}</a>
-	    {% else %}
-	    {% endif %}
-	  {% endfor %}
-	</p>
-      </li>
+    {% for article in articles_page.object_list[:9] %}
+    {{ pub.publisting(article) }}
     {% endfor %}
   </ul>
+  <p><a href="{{SITEURL}}/articles">See all articles...</a></p>
 </div>
 {% endblock %}
