--- a/themes/pj/templates/article.html
+++ b/themes/pj/templates/article.html
@@ -8,7 +8,8 @@
 	{% if not loop.last %},{% endif %}
       {% endfor %}
     </p>
-    <p>Available documents:
+<p>Fulltext available: <a href="{{article.fulltexturl}}"><i class="fi-page" style="margin-right:5px"> </i>PDF</a> Run in OpenCOR: <a href="{{article.runmodelurl}}"><i class="fi-link"></i> CellML</a></p>
+    <p>Extra documents:
       {% for doc in article.documents %}
 	{% if loop.index is odd %}
 	  <span style="margin-right:10px"><i class="fi-page" style="margin-right:5px"></i><a href="{{article.documents[loop.index0+1]}}">{{doc}}</a></span>
