WIP add publication listing as table

--- a/themes/pj/templates/base.html
+++ b/themes/pj/templates/base.html
@@ -57,6 +57,10 @@
 	{% endblock %}
       </div>
     </div>
+    <script type="text/javascript" src="{{SITEURL}}/theme/js/jquery.js"></script>
+    <script type="text/javascript" src="{{SITEURL}}/theme/js/what-input.js"></script>
+    <script type="text/javascript" src="{{SITEURL}}/theme/js/foundation.min.js"></script>
+		
   </body>
 
 </html>
