--- a/themes/pj/templates/shared/pub.html
+++ b/themes/pj/templates/shared/pub.html
@@ -1,21 +1,37 @@
 {% macro publisting(pub_article) %}
-      <li>
-	<p style="margin-bottom:0px"><a href="{{SITEURL}}/{{pub_article.url}}">{{pub_article.title}}</a></p>
-	<p>
-	  {% for author in pub_article.pubauthor %} 
-	    {{author}}
-	    {% if not loop.last %}
-	      ,
-	    {% endif %}
-	  {% endfor %}
-	  {% if pub_article.fulltexturl %}
-	  <span style="margin-right:6px" class="small"><small><a href="{{pub_article.fulltexturl}}">Fulltext</a></small></span>
-	  {% else %}
-	  {% endif %}
-	  {% if pub_article.runmodelurl %}
-	  <span><small><a href="{{pub_article.runmodelurl}}">Run in OpenCOR</a></small></span>
-	  {% else %}
-	  {% endif %}
-	</p>
-      </li>
+<tr>
+  <td class="medium-9 columns">
+    <p style="margin-bottom:0px"><a href="{{SITEURL}}/{{pub_article.url}}">{{pub_article.title}}</a></p>
+    <p>
+      {% for author in pub_article.pubauthor %} 
+      {{author}}
+      {% if not loop.last %}
+      ,
+      {% endif %}
+      {% endfor %}
+    </p>
+  </td>
+  <td class="medium-3 columns" style="text-align:center">
+    {% if pub_article.fulltexturl %}
+    <span style="margin-right:6px" class="small"><small><a href="{{pub_article.fulltexturl}}">Fulltext PDF</a></small></span>
+    {% else %}
+    {% endif %}
+    {% if pub_article.runmodelurl %}
+    <span><small><a href="{{pub_article.runmodelurl}}">Launch with OpenCOR</a></small></span>
+    {% else %}
+    {% endif %}
+  </td>
+</tr>
+{% endmacro %}
+
+{% macro pubtable(pub_articles) %}
+  <table>
+    {% for article in pub_articles %}
+    {{ publisting(article) }}
+    {% endfor %}
+  </table>
+  <div class="dropdown-pane" id="opencor-note" data-dropdown data-hover="true" data-hover-pane="true">
+    Please note that this option requires <a href="http://opencor.ws">OpenCOR</a> to be installed onto your computer and opened at least once.
+  </div>
+
 {% endmacro %}
