--- a/themes/pj/templates/article.html
+++ b/themes/pj/templates/article.html
@@ -1,12 +1,10 @@
 {% extends 'base.html' %}
+{% import 'shared/pub.html' as pub %}
 {% block title %} {{page.title}} {% endblock %}
 {% block body %}
     <h2>{{article.title}}</h2>
     <p>
-      {% for author in article.pubauthor %}
-	{{author}}
-	{% if not loop.last %},{% endif %}
-      {% endfor %}
+      {{pub.authorlist(article)}}
     </p>
 <p>Fulltext available: <a href="{{article.fulltexturl}}"><i class="fi-page" style="margin-right:5px"> </i>PDF</a> Run in OpenCOR: <a href="{{article.runmodelurl}}"><i class="fi-link"></i> CellML</a></p>
     <p>Extra documents:
