--- a/themes/pj/templates/base.html
+++ b/themes/pj/templates/base.html
@@ -33,6 +33,7 @@
 	  <div class="top-bar">
 	    <div class="top-bar-left">
 	      <ul class="menu">
+		<li><a href="{{SITEURL}}/">Home</a></li>
 		<li><a href="{{SITEURL}}/physiome-project.html">The Physiome Project</a></li>
 		<li><a href="{{SITEURL}}/about.html">About the Journal</a></li>
 		<li><a href="{{SITEURL}}/instructions-to-authors.html">Instructions to Authors</a></li>
