--- a/themes/pj/templates/shared/pub.html
+++ b/themes/pj/templates/shared/pub.html
@@ -12,7 +12,7 @@
     {% else %}
     {% endif %}
     {% if pub_article.runmodelurl %}
-    <span><small><a href="{{pub_article.runmodelurl}}">Launch with OpenCOR</a></small></span>
+    <span><a class="button small alert" href="{{pub_article.runmodelurl}}">Launch with OpenCOR</a></span>
     {% else %}
     {% endif %}
   </td>
