--- a/themes/pj/templates/article.html
+++ b/themes/pj/templates/article.html
@@ -9,10 +9,18 @@
 <hr>
 {% if article.primarypaperurl %}
   <p><em>This <em>Physiome</em> paper describes data and models from the primary paper <a rel="noopener" target="_blank" href="{{article.primarypaperurl}}">{{article.primarypapername}}</a></em>.</p>
-  {% endif %}
-  <p>{% if article.runmodelurl %}
-  <a class="button alert small" href="{{article.runmodelurl}}" rel="noopener" target="_blank">Launch with OpenCOR</a></p>
-  {% endif %}</p>
+{% endif %}
+<p>{% if article.runmodelurl %}
+  <a class="button alert small" href="{{article.runmodelurl}}" rel="noopener" target="_blank">Launch with OpenCOR</a>
+{% endif %}
+{% if article.mathsurl %}
+  <a class="button alert small" href="{{article.mathsurl}}" rel="noopener" target="_blank">Maths</a>
+{% endif %}
+{% if article.codeurl %}
+  <a class="button alert small" href="{{article.codeurl}}" rel="noopener" target="_blank">Code</a>
+{% endif %}
+
+</p>
 <p>Fulltext available: 
   {% if article.fulltexturl %}
     <a href="{{article.fulltexturl}}"><i class="fi-page" style="margin-right:5px"> </i>PDF</a>
@@ -32,5 +40,5 @@
   {% else %}
   {% endif %}
   {{article.content}}
-  
+
 {% endblock %}
