--- a/themes/pj/templates/article.html
+++ b/themes/pj/templates/article.html
@@ -40,43 +40,79 @@
     </p>
   {% else %}
   {% endif %}
-  {{article.content}}
-
 
   {% if article.archivedescription %}
-    <p>{{article.archivedescription}}</p>
+    <div class="claro">
+    	<h2 id="archiveHeader"></h2>
+    	<div id="archiveItems"></div>
+    </div>
+	<!-- load Dojo -->
+	<script type="text/javascript">
+		// Instead of using data-dojo-config, we're creating a dojoConfig
+		// object *before* we load dojo.js; they're functionally identical,
+		// it's just easier to read this approach with a larger configuration.
+		var dojoConfig = {
+			async : true,
+			// This code registers the correct location of the "andre"
+			// package so we can load Dojo from the CDN whilst still
+			// being able to load local modules
+			packages : [ {
+				name : "views",
+				location : '/theme/js/views'
+			} ],
+			gfxRenderer : "svg,silverlight,vml" // svg is first priority
+		};
+	</script>
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/dojo/1.11.2/dojo/dojo.js"
+		type="text/javascript"></script>
+	<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/dojo/1.10.4/dijit/themes/claro/claro.css" media="screen">
+	<link rel="stylesheet" href="{{SITEURL}}/theme/css/article.css" />
+	<!-- and load our archive viewer -->
+	<script type="text/javascript">    
+	    require([
+			"dojo/dom",
+			"dojo/json",
+			"dijit/TitlePane",
+			"views/cellml",
+			"dojo/text!{{article.archivedescription}}",
+			"dojo/domReady!"
+		], function(dom, json, TitlePane, CellmlView, data){
+	
+	    	// parse the archive description
+	    	var archiveDescription = json.parse(data);
+	    	
+	    	// set the heading
+	    	dom.byId("archiveHeader").innerHTML = "COMBINE Archive DOI: " + archiveDescription.doi
+	    	
+	    	// create the title panes
+	    	var items = archiveDescription.children;
+	    	var nItems = items.length;
+	    	for (var i = 0; i < nItems; i++) {
+				var item = items[i];
+				console.log(item);
+				var content = null;
+				if ("cellml" in item) {
+					content = new CellmlView({
+						"description": item.description,
+						"cellml": item.cellml
+					});
+				} else {
+					content = item.description; 
+				}
+		    	var tp = new TitlePane({
+		    		"title": item.location,
+		    		"open": "highlight" in item ? item.highlight : false,
+		    		"content": content
+		    	});
+		    	dom.byId("archiveItems").appendChild(tp.domNode);
+		    	tp.startup();
+	    	}
+		});
+   	</script>
   {% else %}
+    {{article.content}}
   {% endif %}
-		<!-- configure Dojo -->
-		<script type="text/javascript">
-			// Instead of using data-dojo-config, we're creating a dojoConfig
-			// object *before* we load dojo.js; they're functionally identical,
-			// it's just easier to read this approach with a larger configuration.
-			var dojoConfig = {
-				async : true,
-				// This code registers the correct location of the "andre"
-				// package so we can load Dojo from the CDN whilst still
-				// being able to load local modules
-				packages : [ {
-					name : "andre",
-					location : location.pathname.replace(/\/[^/]*$/, '') + '/js'
-				} ],
-				gfxRenderer : "svg,silverlight,vml" // svg is first priority
-			};
-		</script>
-		<!-- required styling -->
-		
-		<link rel="stylesheet" type="text/css" href="styles.css">
-		<!-- load Dojo -->
-		<script
-			src="https://ajax.googleapis.com/ajax/libs/dojo/1.11.2/dojo/dojo.js"
-			type="text/javascript"></script>
-		<!-- and load our plotting module -->
-		<script type="text/javascript">
-			require([ 'andre/createPlot' ], function(plotter) {
-		
-			});
-		</script>
 		
 {% endblock %}
 
