--- a/themes/pj/templates/article.html
+++ b/themes/pj/templates/article.html
@@ -10,15 +10,16 @@
 {% if article.primarypaperurl %}
   <p><em>This <em>Physiome</em> paper describes data and models from the primary paper <a rel="noopener" target="_blank" href="{{article.primarypaperurl}}">{{article.primarypapername}}</a></em>.</p>
 {% endif %}
-<p>{% if article.runmodelurl %}
-  <a class="button alert small" href="{{article.runmodelurl}}" rel="noopener" target="_blank">Launch with OpenCOR</a>
-{% endif %}
-{% if article.mathsurl %}
+<p>{% if article.mathsurl %}
   <a class="button alert small" href="{{article.mathsurl}}" rel="noopener" target="_blank">Maths</a>
 {% endif %}
 {% if article.codeurl %}
   <a class="button alert small" href="{{article.codeurl}}" rel="noopener" target="_blank">Code</a>
+  {% endif %}
+  {% if article.runmodelurl %}
+  <a class="button alert small" href="{{article.runmodelurl}}">Launch with OpenCOR</a>
 {% endif %}
+
 
 </p>
 <p>Fulltext available: 
