--- a/themes/pj/templates/shared/pub.html
+++ b/themes/pj/templates/shared/pub.html
@@ -9,18 +9,17 @@
   <td class="medium-5 columns">
     {% if pub_article.fulltexturl %}
     <span style="margin-right:6px" class="small"><a class="button small" href="{{pub_article.fulltexturl}}">Fulltext PDF</a></span>
-    {% else %}
+    {% endif %}
+    {% if pub_article.mathsurl %}
+    <span><a class="button small alert" target="_blank" rel="noopener" href="{{pub_article.mathsurl}}">Maths</a></span>
+    {% endif %}
+    {% if pub_article.codeurl %}
+    <span><a class="button small alert" target="_blank" rel="noopener" href="{{pub_article.codeurl}}">Code</a></span>
     {% endif %}
     {% if pub_article.runmodelurl %}
     <span><a class="button small alert" href="{{pub_article.runmodelurl}}">Launch with OpenCOR</a></span>
-    {% else %}
     {% endif %}
-    {% if pub_article.mathsurl %}
-    <span><a class="button small alert" href="{{pub_article.mathsurl}}">Maths</a></span>
-    {% endif %}
-    {% if pub_article.codeurl %}
-    <span><a class="button small alert" href="{{pub_article.codeurl}}">Code</a></span>
-    {% endif %}
+
   </td>
 </tr>
 {% endmacro %}
