update pdf for first article - amend author list for first article - open fulltext PDFs in new tab - add maths and code views for the article through PMR

--- a/themes/pj/templates/article.html
+++ b/themes/pj/templates/article.html
@@ -24,7 +24,7 @@
 </p>
 <p>Fulltext available: 
   {% if article.fulltexturl %}
-    <a href="{{article.fulltexturl}}"><i class="fi-page" style="margin-right:5px"> </i>PDF</a>
+    <a href="{{article.fulltexturl}}" target="_blank"><i class="fi-page" style="margin-right:5px"> </i>PDF</a>
   {% else %}
   {% endif %}
   {% if article.primarypaper %}
