--- a/themes/pj/templates/shared/pub.html
+++ b/themes/pj/templates/shared/pub.html
@@ -8,7 +8,7 @@
   </td>
   <td class="medium-5 columns">
     {% if pub_article.fulltexturl %}
-    <span style="margin-right:6px" class="small"><a class="button small" href="{{pub_article.fulltexturl}}">Fulltext PDF</a></span>
+    <span style="margin-right:6px" class="small"><a class="button small" target="_blank" href="{{pub_article.fulltexturl}}">Fulltext PDF</a></span>
     {% endif %}
     {% if pub_article.mathsurl %}
     <span><a class="button small alert" target="_blank" rel="noopener" href="{{pub_article.mathsurl}}">Maths</a></span>
