--- a/themes/pj/templates/article.html
+++ b/themes/pj/templates/article.html
@@ -63,10 +63,16 @@
 			gfxRenderer : "svg,silverlight,vml" // svg is first priority
 		};
 	</script>
+	<!-- 
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/dojo/1.11.2/dojo/dojo.js"
 		type="text/javascript"></script>
 	<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/dojo/1.10.4/dijit/themes/claro/claro.css" media="screen">
+	-->
+	<script
+		src="{{SITEURL}}/theme/js/dojo-release-1.12.2-src/dojo/dojo.js"
+		type="text/javascript"></script>
+	<link rel="stylesheet" href="{{SITEURL}}/theme/js/dojo-release-1.12.2-src/dijit/themes/claro/claro.css" media="screen">
 	<link rel="stylesheet" href="{{SITEURL}}/theme/css/article.css" />
 	<!-- and load our archive viewer -->
 	<script type="text/javascript">    
