--- a/themes/pj/templates/baseSafetyCopy.html
+++ b/themes/pj/templates/baseSafetyCopy.html
@@ -36,6 +36,7 @@
 		<li><a href="{{SITEURL}}/">Home</a></li>
 		<li><a href="{{SITEURL}}/physiome-project.html">The Physiome Project</a></li>
 		<li><a href="{{SITEURL}}/about.html">About the Journal</a></li>
+		<li><a href="{{SITEURL}}/instructions-to-authors.html">Instructions to Authors</a></li>
 		<li><a href="{{SITEURL}}/editorial-board.html">Editorial Board</a></li>
 	      </ul>
 	    </div>
