Work on Author Instructions
Copied Andres text into Author instructions and tried to add the image.

--- a/themes/pj/templates/shared/common.html
+++ b/themes/pj/templates/shared/common.html
@@ -13,14 +13,11 @@
   </head>
   <body>
     <!-- Top navigation bar -->
-    <a href="http://www.iups.org" style="display:block;color:black;font-weight:normal">
-      <div class="row">
-	<div class="small-12 columns"></div>
       </div>
     </a>
     <div style="background-color:rgb(243, 235, 255);">
       <div class="row">
-	<div class="small-8 column"><a href="/"><h1 style="color:black;display:inline;font-family:'Roboto',sans-serif;padding-top:15px;padding-bottom:15px;letter-spacing:-3px"><em>Physiome</em></h1></a><span style="margin-left:10px"><a href="http://iups.org" style="color:black"><img src="theme/images/iups.svg" style="width:60px;vertical-align:bottom"><span style="vertical-align:30%">International Union of Physiological Sciences</span></a></span></div>
+	<div class="small-8 column"><a href="/"><h1 style="color:black;display:inline;font-family:'Roboto',sans-serif;padding-top:15px;padding-bottom:15px;letter-spacing:-3px"><em>Physiome</em></h1></a><span style="margin-left:10px"></span></div>
 	<div class="small-4 column" style="text-align:right">
 	  <img width="350px" src="theme/images/associated-branding.png">
 	</div>
