--- a/themes/pj/templates/base.html
+++ b/themes/pj/templates/base.html
@@ -20,7 +20,7 @@
     </a>
     <div style="background-color:rgb(243, 235, 255);">
       <div class="row">
-	<div class="small-8 column"><a href="{{SITEURL}}/"><h1 style="color:black;display:inline;font-family:'Roboto',sans-serif;padding-top:15px;padding-bottom:15px;letter-spacing:-3px"><em>Physiome</em></h1></a><span style="margin-left:10px"></span></div>
+	<div class="small-8 column"><a href="{{SITEURL}}/"><h1 style="color:black;display:inline;font-family:'Roboto',sans-serif;padding-top:15px;padding-bottom:15px;letter-spacing:-3px"><em>Physiome</em></h1></a><img src="PurplePhysiome-squarePage.svg" alt="Physiome logo" style="width:20%;height:20%;"><span style="margin-left:10px"></span></div>
 	<div class="small-4 column" style="text-align:right">
 	</div>
       </div>
@@ -33,9 +33,9 @@
 	      <ul class="menu">
 		<li><a href="{{SITEURL}}/">Home</a></li>
 		<li><a href="{{SITEURL}}/physiome-project.html">The Physiome Project</a></li>
-        <li><a href="{{SITEURL}}/pmr.html">The Physiome Model Repository</a></li>
+        <li><a href="{{SITEURL}}/pmr.html">PMR</a></li>
 		<li><a href="{{SITEURL}}/about.html">About the Journal</a></li>
-		<li><a href="{{SITEURL}}/editorial-board.html">Editorial Board</a></li>
+        <li><a href="{{SITEURL}}/instructions-to-authors.html">Author Instructions</a></li>
 	      </ul>
 	    </div>
 	    <div class="top-bar-right">
