Articles in menu
Articles link in the banner menu

--- a/themes/pj/templates/base.html
+++ b/themes/pj/templates/base.html
@@ -36,7 +36,7 @@
 		<li><a href="{{SITEURL}}/">Home</a></li>
 		<li><a href="{{SITEURL}}/physiome-project.html">The Physiome Project</a></li>
 		<li><a href="{{SITEURL}}/about.html">About the Journal</a></li>
-		<li><a href="{{SITEURL}}/editorial-board.html">Editorial Board</a></li>
+		<li><a href="{{SITEURL}}/articles.html">Articles</a></li>
 	      </ul>
 	    </div>
 	    <div class="top-bar-right">
