--- a/themes/pj/templates/index.html
+++ b/themes/pj/templates/index.html
@@ -31,7 +31,7 @@
 <div style = "text-align: center;">
 
 <video width="480" height="360" controls>
-    <source src="VID_20190313_115526.mp4" type="video/mp4">
+    <source src="{{SITEURL}}/theme/images/VID_20190313_115526.mp4" type="video/mp4">
         Your browser does not support the video tag.
 </video>
 
