Logo and weird blue
This is not the blue we want.
But the logo is correct.

--- a/themes/pj/templates/base.html
+++ b/themes/pj/templates/base.html
@@ -18,9 +18,9 @@
 	<div class="small-12 columns"></div>
       </div>
     </a>
-    <div style="background-color:rgb(243, 235, 255);">
+    <div style="background-color:#3e93dd;">
       <div class="row">
-	<div class="small-8 column"><a href="{{SITEURL}}/"><h1 style="color:black;display:inline;font-family:'Roboto',sans-serif;padding-top:15px;padding-bottom:15px;letter-spacing:-3px"><em>Physiome</em></h1></a><img src="{{SITEURL}}/theme/images/waves1.png" alt="Physiome logo" style="width:20%;height:20%;"><span style="margin-left:10px"></span></div>
+	<div class="small-8 column"><a href="{{SITEURL}}/"><h1 style="color:black;display:inline;font-family:'Roboto',sans-serif;padding-top:15px;padding-bottom:15px;letter-spacing:-3px"><em>Physiome</em></h1></a><img src="{{SITEURL}}/theme/images/Physiome-squarePage-Purple.svg" alt="Physiome logo" style="width:20%;height:20%;"><span style="margin-left:10px"></span></div>
 	<div class="small-4 column" style="text-align:right">
 	</div>
       </div>
