Changed color scheme
Way cooler now. And the right logos. 
Also made minor changes to the text on the different pages.

--- a/themes/pj/templates/base.html
+++ b/themes/pj/templates/base.html
@@ -18,28 +18,29 @@
 	<div class="small-12 columns"></div>
       </div>
     </a>
-    <div style="background-color:#3e93dd;">
+    <div style="background-color:#c3a9e5;">
       <div class="row">
-	<div class="small-8 column"><a href="{{SITEURL}}/"><h1 style="color:black;display:inline;font-family:'Roboto',sans-serif;padding-top:15px;padding-bottom:15px;letter-spacing:-3px"><em>Physiome</em></h1></a><img src="{{SITEURL}}/theme/images/Physiome-squarePage-Purple.svg" alt="Physiome logo" style="width:20%;height:20%;"><span style="margin-left:10px"></span></div>
+	<div class="small-8 column"><a href="{{SITEURL}}/"><h1 style="color:#4e4c51;display:inline;font-family:'Roboto',sans-serif;padding-top:15px;padding-bottom:5px;letter-spacing:-3px"><em>Physiome</em></h1></a><img src="{{SITEURL}}/theme/images/Physiome-squarePage-Purple.svg" alt="Physiome logo" style="width:20%;height:20%;"><span style="margin-left:10px"></span></div>
 	<div class="small-4 column" style="text-align:right">
 	</div>
       </div>
     </div>
-    <div style="background-color: #e6e6e6;">
+    <div style="background-color: #000000;">
       <div class="row">
 	<div class="small-12 column">
-	  <div class="top-bar">
+	  <div class="top-bar" style="background-color: #000000;">
 	    <div class="top-bar-left">
-	      <ul class="menu">
-		<li><a href="{{SITEURL}}/">Home</a></li>
-		<li><a href="{{SITEURL}}/physiome-project.html">The Physiome Project</a></li>
-        <li><a href="{{SITEURL}}/pmr.html">PMR</a></li>
-		<li><a href="{{SITEURL}}/about.html">About the Journal</a></li>
-		<li><a href="{{SITEURL}}/articles.html">Articles</a></li>
+	      <ul class="menu" style="background-color: #000000;">
+		<li><a href="{{SITEURL}}/" style=" color:white;">Home</a></li>
+		<li><a href="{{SITEURL}}/physiome-project.html" style=" color:white;">The Physiome Project</a></li>
+        <li><a href="{{SITEURL}}/pmr.html" style=" color:white;">PMR</a></li>
+		<li><a href="{{SITEURL}}/about.html" style=" color:white;">About the Journal</a></li>
+		<li><a href="{{SITEURL}}/articles.html" style=" color:white;">Articles</a></li>
+        <li><a href="{{SITEURL}}/instructions-to-authors.html" style=" color:white;">Author instructions</a></li>
 	      </ul>
 	    </div>
 	    <div class="top-bar-right">
-	      <ul class="menu">
+	      <ul class="menu" style="background-color: #000000; color:#4e4c51;">
 		<li><input type="text" placeholder="Find articles..."></li>
 		<li><button type="button" class="button">Search</button></li>
 	      </ul>
