--- a/themes/pj/templates/index.html
+++ b/themes/pj/templates/index.html
@@ -11,7 +11,7 @@
       <style>
           .button {
               border: 1px solid #003b6f;
-              color: black;
+              color: white;
               padding: 15px 25px;
               text-align: center;
               font-size: 16px;
@@ -20,7 +20,7 @@
           }
       
           </style>
-      <a <button href="instructions-to-authors" class="button">How do I submit a paper?</button> </a>
+      <a <button href="instructions-to-authors.html" class="button">How do I submit a paper?</button> </a>
       
   </div>
   
