--- a/themes/pj/templates/shared/common.html
+++ b/themes/pj/templates/shared/common.html
@@ -23,7 +23,7 @@
 	</div>
       </div>
     </div>
-    <div style="background-color: #e6e6e6;">
+    <div style="background-color: #949199;">
       <div class="row">
 	<div class="small-12 column">
 	  <div class="top-bar">
