--- a/themes/pj/templates/article.html
+++ b/themes/pj/templates/article.html
@@ -15,8 +15,8 @@
 <p>{% if article.mathsurl %}
 <a class="button" href="{{article.mathsurl}}" style="width: 140px; height: 40px; background-color: #e7e7e7; border: 2px solid #e7e7e7; padding: 0px; margin: 0px; border: 0px" rel="noopener" target="_blank" ><img src="PMR_button.svg" style="width: 100%; height: 100%; padding: 0px; margin: 0px; border: 0px"> </a>
 {% endif %}
-{% if article.codeurl %}
-<a class="button" href="{{article.codeurl}}" style="width: 140px; height: 40px; background-color: #e7e7e7; border: 2px solid #e7e7e7; padding: 0px; margin: 0px; border: 0px" rel="noopener" target="_blank" ><img src="Fulltext_button.svg"> </a>
+{% if article.fulltexturl %}
+<a class="button" href="{{article.fulltexturl}}" style="width: 140px; height: 40px; background-color: #e7e7e7; border: 2px solid #e7e7e7; padding: 0px; margin: 0px; border: 0px" rel="noopener" target="_blank" ><img src="Fulltext_button.svg"> </a>
 {% endif %}
   {% if article.runmodelurl %}
   <a class="button" href="{{article.runmodelurl}}" style="width: 140px; height: 40px; background-color: #e7e7e7; border: 2px solid #e7e7e7; padding: 0px; margin: 0px; border: 0px" ><img src="Run_button.svg"> </a>
@@ -27,13 +27,6 @@
   <p>This <em>Physiome</em> paper describes data and models from the primary paper: <a rel="noopener" target="_blank" href="{{article.primarypaperurl}}">{{article.primarypapername}}</a></p>
 {% endif %}
 
-{% if article.fulltexturl %}
-<p><em>Physiome</em> article PDF available at: 
-  <a href="{{article.fulltexturl}}" target="_blank"><i class="fi-page" style="margin-right:5px"> </i>{{article.fulltexturl}}</a>
-</p>
-{% else %}
-  <p><em>Article PDF not yet available.</em></p>
-{% endif %}
 {% if article.archiveurl %}
 <p><em>Physiome</em> article <span data-tooltip aria-haspopup="true" class="has-tip top" data-disable-hover="false" tabindex="1" title="This is a COMBINE archive (Open Modelling Exchange format, OMEX) zip file containing all the resources required to support reproducibility.">archive</span> available at: 
   <a href="{{article.archiveurl}}" target="_blank">{{article.archiveurl}}</a>
