--- a/themes/pj/templates/article.html
+++ b/themes/pj/templates/article.html
@@ -13,13 +13,13 @@
 </p>
 {% endif %}
 <p>{% if article.mathsurl %}
-<a class="button" href="{{article.mathsurl}}" style="width: 140px; height: 40px; background-color: #e7e7e7; border: 2px solid #e7e7e7; padding: 0px; margin: 0px; border: 0px" rel="noopener" target="_blank" ><img src="PMR_button.svg" style="width: 100%; height: 100%; padding: 0px; margin: 0px; border: 0px"> </a>
+<a class="button" href="{{article.mathsurl}}" style="width: 140px; height: 40px; background-color: #e7e7e7; border: 2px solid #e7e7e7; padding: 0px; margin: 0px; border: 0px" rel="noopener" target="_blank" ><img src="{{SITEURL}}/theme/images/PMR_button.svg" style="width: 100%; height: 100%; padding: 0px; margin: 0px; border: 0px"> </a>
 {% endif %}
 {% if article.fulltexturl %}
-<a class="button" href="{{article.fulltexturl}}" style="width: 140px; height: 40px; background-color: #e7e7e7; border: 2px solid #e7e7e7; padding: 0px; margin: 0px; border: 0px" rel="noopener" target="_blank" ><img src="Fulltext_button.svg"> </a>
+<a class="button" href="{{article.fulltexturl}}" style="width: 140px; height: 40px; background-color: #e7e7e7; border: 2px solid #e7e7e7; padding: 0px; margin: 0px; border: 0px" rel="noopener" target="_blank" ><img src="{{SITEURL}}/theme/images/Fulltext_button.svg"> </a>
 {% endif %}
   {% if article.runmodelurl %}
-  <a class="button" href="{{article.runmodelurl}}" style="width: 140px; height: 40px; background-color: #e7e7e7; border: 2px solid #e7e7e7; padding: 0px; margin: 0px; border: 0px" ><img src="Run_button.svg"> </a>
+  <a class="button" href="{{article.runmodelurl}}" style="width: 140px; height: 40px; background-color: #e7e7e7; border: 2px solid #e7e7e7; padding: 0px; margin: 0px; border: 0px" ><img src="{{SITEURL}}/theme/images/Run_button.svg"> </a>
 {% endif %}
 </p>
 
