Preparation for COMBINE
Added footer with contact information and changed the logo, button colors and background.

--- a/themes/pj/templates/base.html
+++ b/themes/pj/templates/base.html
@@ -18,9 +18,9 @@
 	<div class="small-12 columns"></div>
       </div>
     </a>
-    <div style="background-color:#c3a9e5;">
+    <div style="background-color: white;">
       <div class="row">
-	<div class="small-8 column"><a href="{{SITEURL}}/"><h1 style="color:#4e4c51;display:inline;font-family:'Roboto',sans-serif;padding-top:15px;padding-bottom:5px;letter-spacing:-3px"><em>Physiome</em></h1></a><img src="{{SITEURL}}/theme/images/Physiome-squarePage-Purple.svg" alt="Physiome logo" style="width:20%;height:20%;"><span style="margin-left:10px"></span></div>
+	<div class="small-8 column"><a href="{{SITEURL}}/"></a><img src="{{SITEURL}}/theme/images/Physiome-beside.png" alt="Physiome logo" style="width:100%;height:100%;"><span style="margin-left:10px"></span></div>
 	<div class="small-4 column" style="text-align:right">
 	</div>
       </div>
@@ -41,7 +41,7 @@
 	    <div class="top-bar-right">
 	      <ul class="menu" style="background-color: #000000; color:#4e4c51;">
 		<li><input type="text" placeholder="Find articles..."></li>
-		<li><button type="button" class="button">Search</button></li>
+        <li><button type="button" style="background-color: #580078; color:white; border: 1px solid #580078;" class="button">Search</button> </li>
 	      </ul>
 	    </div>
 	  </div>
@@ -62,4 +62,23 @@
 		
   </body>
 
+      <!-- Footer with contact info -->
+      
+      <style>
+          .footer {
+
+              width: 100%;
+              background-color: black;
+              color: white;
+              text-align: center;
+          }
+      </style>
+      
+ 
+      <div class="footer" id="footer-content">
+      
+      <p>Contact us: <a style="color:white" href="mailto:physiome@physiomeproject.org">
+          physiome@physiomeproject.org</a>.</p>
+      <p>Meet our <a style="color:white" href="{{SITEURL}}/editorial-board">Editorial Board.</a></p>
+      </div>
 </html>
