--- a/themes/pj/templates/index.html
+++ b/themes/pj/templates/index.html
@@ -6,7 +6,7 @@
     <p><em>Physiome</em> publishes reproducible and reusable mathematical models of physiological processes where the experimental details and model validation have been published or accepted for publication in a recognised 'primary' peer-reviewed journal. <em>Physiome</em> curators will help authors ensure that models and simulation experiments are made available using appropriate community standards prior to acceptance for publication in <em>Physiome</em>. When aspects of a computational modelling study are not able to be encoded in standard formats, <em>Physiome</em> curators will help authors ensure their work is as open, reproducible, and reusable as possible.</p>
     <p><em>Physiome</em> editors will help as much as is currently possible with model curation and annotation to ensure that the modeling results claimed in the primary paper are consistent with the published model. <em>Physiome</em> is open access with a low Author Processing Charge. Models can be displayed and, in some cases, run directly from the journal website with freely available open source software.</p>
     
-    <p>Meet our <a style="color:#580078" href="{{SITEURL}}/editorial-board">Editorial Board.</a></p>
+    <p>Meet our <a style="color:#580078" href="{{SITEURL}}/editorial-board.html">Editorial Board.</a></p>
   
   <div style = "text-align: center;">
       
@@ -45,7 +45,5 @@
   <h3>Latest articles</h3>
   {{ pub.pubtable(articles_page.object_list[:9]) }}
   <p><a style="color:#580078" href="{{SITEURL}}/articles">See all articles...</a></p>
+</div>
 {% endblock %}
-
-
-
